# viralatex

./: .ai-jail  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  PRD.md  README.md
.github/workflows/: test.yml
desktop/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
desktop/ai_service/: pyproject.toml  server.py
desktop/ai_service/sidecar/: __init__.py  app.py  config.py  http_api.py  runtimes.py  serialization.py  service.py  template_compiler.py
desktop/ai_service/tests/: test_config.py  test_server.py  test_service.py  test_stub_runtime.py  test_template_compiler.py
desktop/scripts/: require-tectonic.mjs  setup-tectonic.mjs  tectonic.mjs  tectonic.test.mjs
desktop/src/: App.test.tsx  App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: ai_service.rs  app_state.rs  domain.rs  lib.rs  llm.rs  main.rs  renderer.rs  workspace.rs
desktop/src-tauri/templates/default/: resume.cls
examples/sample-workspace/: workspace.yml
examples/sample-workspace/.app/: state.yml
examples/sample-workspace/blocks/education/: ufam-en.yml  ufam-pt.yml
examples/sample-workspace/blocks/experience/: trocados-dev-en.yml  trocados-dev-pt.yml
examples/sample-workspace/documents/: base.tex
examples/sample-workspace/profile/: profile.yml
examples/sample-workspace/resumes/: base-en.yml  base-pt.yml
src/shared/: profile.tex
src/template/: resume.cls
src/versions/en/: backend.tex  base.tex
src/versions/pt/: backend.tex  base.tex
(+26 files in other folders)
