[project]
name = "resume-studio-ai-service"
version = "0.1.0"
description = "Local AI sidecar for Resume Studio"
requires-python = ">=3.12"
dependencies = [
  "deepagents>=0.0.5",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "langchain-openai>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-ollama>=0.3.0",
  "PyYAML>=6.0.2",
]

[tool.uv]
package = false
